<resources>
    <string name="strTitleAppVersion">App version</string>
    <string name="strVersion" formatted="false">Version %s</string>
    <string name="strMsgShareApp" formatted="false">QuranApp is a free and open-source app to read and explore the Noble Qur\'an with translations. This app has a nice and clean interface with features like tafsir, recitation, reminder and many more. \n\nDOWNLOAD NOW:\n%s</string>
    <string name="strTitleDownloadSunnahApp" translatable="false">Download SunnahApp</string>
    <string name="strTitleLicenses">Licenses</string>
    <string name="strLabelClose">Close</string>
    <string name="strLabelOkay">Okay</string>
    <string name="strLabelGotIt">Got it</string>
    <string name="strLabelCancel">Cancel</string>
    <string name="strLabelApply">Apply</string>
    <string name="strLabelSend">Send</string>
    <string name="labelAdd">Add</string>
    <string name="strLabelRemove">Remove</string>
    <string name="strLabelDelete">Delete</string>
    <string name="strLabelDownloaded">Downloaded</string>
    <string name="strTitleDeleteTafsir">Delete Tafsir?</string>
    <string name="strMsgDeleteTafsir" formatted="false">Are you sure you want to delete “%s”? This will remove the downloaded tafsir data from your device.</string>
    <string name="strLabelRemoveAll">Remove all</string>
    <string name="strLabelCopy">Copy</string>
    <string name="strLabelBack">Back</string>
    <string name="strLabelTop">Top</string>
    <string name="strLabelReset">Reset</string>
    <string name="strLabelRetry">Retry</string>
    <string name="strLabelRefresh">Refresh</string>
    <string name="strLabelDismiss">Dismiss</string>
    <string name="strLabelDiscard">Discard</string>
    <string name="strLabelHide">Hide</string>
    <string name="strLabelEdit">Edit</string>
    <string name="strLabelDone">Done</string>
    <string name="strLabelRestart">Restart</string>
    <string name="strLabelView">View</string>
    <string name="strLabelOpen">Open</string>
    <string name="strLabelOpenInReader">Open in Reader</string>
    <string name="strLabelRead">Read »</string>
    <string name="strLabelViewAll">View all</string>
    <string name="strLabelChangeNRestart">Change &amp; Restart</string>
    <string name="strLabelAdvertisement">Advertisement</string>
    <string name="strLabelSkip">Skip</string>
    <string name="strLabelNotNow">Not now</string>
    <string name="strLabelPrevious">Previous</string>
    <string name="strLabelNext">Next</string>
    <string name="strLabelStart">Start</string>
    <string name="strLabelUpdateQuranApp">Update QuranApp</string>
    <string name="labelDownload">Download</string>
    <string name="strLabelDownloadNow">DOWNLOAD NOW</string>
    <string name="strLabelUpdate">Update</string>
    <string name="strLabelInstall">Install</string>
    <string name="strLabelNew">New</string>
    <string name="strLabelPremium">Premium</string>
    <string name="strLabelOn">On</string>
    <string name="strLabelOff">Off</string>
    <string name="strLabelThemeDark">Dark</string>
    <string name="strLabelThemeLight">Light</string>
    <string name="strLabelSystemDefault">System Default</string>
    <string name="strLabelPreviousChapter">Previous chapter</string>
    <string name="strLabelNextChapter">Next chapter</string>
    <string name="strLabelNoPreviousChapter">No previous chapter</string>
    <string name="strLabelNoNextChapter">No next chapter</string>
    <string name="strLabelPreviousJuz">Previous juz</string>
    <string name="strLabelNextJuz">Next juz</string>
    <string name="strLabelNoPreviousJuz">No previous juz</string>
    <string name="strLabelNoNextJuz">No next juz</string>
    <string name="strLabelFullChapter">Read full chapter</string>
    <string name="strLabelContinueChapter">Continue chapter</string>
    <string name="strLabelPreviousVerse">Previous verse</string>
    <string name="strLabelNextVerse">Next verse</string>
    <string name="labelPreviousTafsir">Previous tafsir</string>
    <string name="labelNextTafsir">Next tafsir</string>
    <string name="strLabelVersesText">Verses</string>
    <string name="strLabelSurah" formatted="false">Surah %s</string>
    <string name="strLabelPageNo" formatted="false">Page %d</string>
    <string name="strLabelJuzNo" formatted="false">Juz %d</string>
    <string name="strLabelVerseNo" formatted="false">Verse %d</string>
    <string name="strLabelVerses" formatted="false">Verses %1$d–%2$d</string>
    <string name="strLabelVerseNoWithColon" formatted="false">Verse : %d</string>
    <string name="strLabelVersesWithColon" formatted="false">Verses : %1$d–%2$d</string>
    <string name="strLabelVerseCountWithColon" formatted="false">Verses: %d</string>
    <string name="strLabelVerseNoRange" formatted="false">%1$d–%2$d</string>
    <string name="strLabelVerseWithChapNo" formatted="false">Verse %1$d:%2$d</string>
    <string name="strLabelVerseSerial" formatted="false">%1$d:%2$d</string>
    <string name="strLabelVerseSerialWithChapter" formatted="false">%1$s %2$d:%3$d</string>
    <string name="strLabelVerseWithChapNameAndNo" formatted="false">Surah %1$s %2$d: Verse %3$d</string>
    <string name="strLabelVerseWithChapNameWithBar" formatted="false">Surah %1$s │ Verse %2$d</string>
    <string name="strLabelVerseWithChapNameWithColon" formatted="false">Surah %1$s : Verse %2$d</string>
    <string name="strLabelFeatureQuranMiniInfo" formatted="false">Chapter No. %1$d │ Verses %2$d–%3$d</string>
    <string name="strTitleAppUser">QuranApp user</string>
    <string name="strTitleHolyQuran">The Holy Quran</string>
    <string name="strTitleQuran">Quran</string>
    <string name="strTitleMakki">Meccan</string>
    <string name="strTitleMadani">Medinan</string>
    <string name="strTitleFootnote">Footnote</string>
    <string name="strTitleFootnotes">Footnotes</string>
    <string name="noFootnotesForThisVerse">There are no footnotes for this verse.</string>
    <string name="strTitleReaderChapters">Chapters</string>
    <string name="strTitleReaderJuz">Juz</string>
    <string name="strTitleReaderHizb">Hizb</string>
    <string name="labelHizbNo" formatted="false">Hizb %d</string>
    <string name="strTitleReaderChapters2">Surahs</string>
    <string name="strTitleReaderJuz2">Juz</string>
    <string name="strTitleReaderVerses">Verses</string>
    <string name="strTitleReaderJumpToVerse">Jump to verse</string>
    <string name="strTitleVerseOptions">Verse options</string>
    <string name="strTitleVerseRecitation">Verse Recitation</string>
    <string name="strTitleReaderVerseInformation" formatted="false">Surah %1$s : %2$d</string>
    <string name="strTitleGotoVerseNo" formatted="false">Go to Verse %d</string>
    <string name="strTitleReadVerseRange" formatted="false">Read Verses %1$d - %2$d</string>
    <string name="strTitleReadTafsirOfVerse" formatted="false">Read tafsir of verse %d</string>
    <string name="strTitleReaderLayoutStyle">Quran view style</string>
    <string name="strTitleReaderLayoutStyleTranslationsView">Translations view</string>
    <string name="strTitleReaderLayoutStylePageView">Page view</string>
    <string name="textSizes">Text sizes</string>
    <string name="strTitleReaderTextSizeArabic">Arabic text size</string>
    <string name="strTitleReaderTextSizeTransl">Translation text size</string>
    <string name="titleReaderTextSizeTafsir">Tafsir text Size</string>
    <string name="strTitleSettings">Settings</string>
    <string name="strTitleBookmark">Bookmark</string>
    <string name="strTitleSendFeedback">Send Feedback</string>
    <string name="strTitleHelpSupport">Help &amp; Support</string>
    <string name="strTitleAboutUs">About Us</string>
    <string name="strTitleBookmarks">Bookmarks</string>
    <string name="strTitleShareApp">Share App</string>
    <string name="strTitleAddNote">Add note</string>
    <string name="strTitleNote">Note</string>
    <string name="strTitleRateApp">Rate App</string>
    <string name="strTitleFilters">Filters</string>
    <string name="strTitleMenu">Menu</string>
    <string name="strTitleTafsir">Tafsir</string>
    <string name="strTitleSelectTafsir">Select Tafsir</string>
    <string name="strTitleAboutSurah">About Surah</string>
    <string name="strTitleTranslations">Translations</string>
    <string name="strTitleDownloadTranslations">Download</string>
    <string name="strTitleRecitations">Recitations</string>
    <string name="strTitleSelectReciter">Select Reciter</string>
    <string name="downloadRecitations">Download Recitations</string>
    <string name="recitationDownloadChapterSubtitle" formatted="false">Chapter %d</string>
    <string name="recitationDownloadChaptersProgress" formatted="false">%1$d / %2$d chapters</string>
    <string name="recitationDownloadAllComplete">All chapters downloaded</string>
    <string name="recitationDownloadConfirmTitle">Download recitations</string>
    <string name="recitationDownloadConfirmMessage">Download all chapters for this reciter? This may use significant storage and data.</string>
    <string name="recitationDownloadSomeFailed">Some chapters failed. Tap retry to queue missing chapters again.</string>
    <string name="recitationDownloadWaitForOtherReciter">Another reciter is already downloading. Wait for it to finish or cancel it before starting a new download.</string>
    <string name="recitationBulkDownloadNotifProgress" formatted="false">%1$d / %2$d chapters downloaded</string>
    <string name="recitationBulkEnqueueNotifTitle">Preparing recitation downloads</string>
    <string name="recitationBulkEnqueueNotifText" formatted="false">%1$s — queued %2$d of %3$d</string>
    <string name="audioOption">Audio option</string>
    <string name="playbackSpeed">Playback speed</string>
    <string name="playbackCount">Playback count</string>
    <string name="strLabelVerseOf" formatted="false">Verse %1$d of %2$d</string>
    <string name="strLabelVerseWithNum" formatted="false">Verse %d</string>
    <string name="strLabelNowPlaying">Now Playing</string>
    <string name="audioOnlyArabic">Play only Quran</string>
    <string name="audioOnlyTranslation">Play only translation</string>
    <string name="audioBothArabicTranslation">Play both Quran and translation</string>
    <string name="titleRecitationGroupSize">Quran Verse Group Size</string>
    <string name="msgRecitationGroupSize">
        Choose how many Quran verses play before translation starts. Example: if you select 3, it plays 3 Quran verses followed by their translations.
    </string>
    <string name="strTitleScripts">Scripts</string>
    <string name="strTitleSelectScripts">Select Script</string>
    <string name="strTitleBookmarkDeleteThis">Remove this bookmark?</string>
    <string name="strTitleBookmarkDeleteAll">Remove all bookmarks?</string>
    <string name="strLabelAdvanceSharing">Advanced Sharing</string>
    <string name="strLabelSelectVerse">Select Verses</string>
    <string name="strLabelCurrentVerse">Current verse</string>
    <string name="strLabelVerseRange">Verse range</string>
    <string name="strLabelSelectTranslations">Select translations</string>
    <string name="strLabelWhatsappStyling">Whatsapp styling</string>
    <string name="strLabelIncludeArabic">Include arabic</string>
    <string name="strLabelIncludeFootnotes">Include footnotes</string>
    <string name="strHintFromVerse">From verse</string>
    <string name="strHintToVerse">To verse</string>
    <string name="strHintFeedbackEmail">Email</string>
    <string name="strHintFeedbackMessage">Message</string>
    <string name="strMsgThemeDark">Dark mode reduces power consumption.</string>
    <string name="strMsgThemeDefault">Adjust according to system settings.</string>
    <string name="strMsgVOTDOn">Get a notification daily in the morning.</string>
    <string name="strDescAddToBookmarks">Add to bookmarks</string>
</resources>