<?xml version="1.0" encoding="utf-8"?>
<com.quranapp.android.widgets.radio.PeaceRadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.quranapp.android.widgets.radio.PeaceRadioButton
        android:id="@id/on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/dr_bg_hover_cornered"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/strLabelOn"
        android:textAppearance="@style/TextAppearanceCommonTitle"
        app:peaceComp_spaceBetween="15dp"
        app:peaceComp_subText="@string/strMsgVOTDOn" />

    <com.quranapp.android.widgets.radio.PeaceRadioButton
        android:id="@id/off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/dr_bg_hover_cornered"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/strLabelOff"
        android:textAppearance="@style/TextAppearanceCommonTitle"
        app:peaceComp_spaceBetween="15dp" />


</com.quranapp.android.widgets.radio.PeaceRadioGroup>